[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.0"
edition = "2021"

[workspace.dependencies]
axum = "0.7"
axum-extra = "0.9"
base16ct = "0.2"
bytes = "1"
bytesize = "1"
chrono = "0.4"
clap = "4"
crossterm = "0.27"
elasticsearch = "8.5.0-alpha.1"
ffmpeg-sys-next = "6"
futures = "0.3"
futures-core = "0.3"
graphicsmagick-sys = "0.6"
log = "0.4"
mime = "0.3"
num_cpus = "1"
num-format = "0.4"
owo-colors = "4"
ratatui = "0.26"
reqwest = "0.12"
scraper = "0.19"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shadow-rs = "0.27"
sqlx = { version = "0.7", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
sync_wrapper = "1"
textwrap = "0.16"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
url = "2"
uuid = "1"

[workspace.dependencies.axum-unix]
git = "https://git.aurora.aur/genya/axum-unix.git"

[workspace.dependencies.dmon]
git = "https://git.aurora.aur/genya/dmon-rs.git"

[workspace.dependencies.fstore]
git = "https://git.aurora.aur/fstore/fstore.git"

[workspace.dependencies.pgtools]
git = "https://git.aurora.aur/genya/pgtools.git"

[workspace.dependencies.sqlx-helper-macros]
git = "https://git.aurora.aur/genya/sqlx-helper-macros.git"

[workspace.dependencies.timber]
git = "https://git.aurora.aur/genya/timber-rs.git"
