[package]
name = "minty-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true, features = ["serde"] }
num-format = { workspace = true, features = ["with-system-locale"] }
owo-colors = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
textwrap = { workspace = true, features = ["terminal_size"] }
timber = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["fs", "io-std", "rt"] }
tokio-util = { workspace = true, features = ["io"] }

[dependencies.minty]
path = "../minty"
version = "0.6"
registry = "minty"
features = ["export", "http"]

[[bin]]
name = "minty"
path = "src/main.rs"
