[package]
name = "minty-cli"
version = "0.3.0"
edition.workspace = true
repository.workspace = true

[dependencies]
ago = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true, features = ["serde"] }
num-format = { workspace = true, features = ["with-system-locale"] }
owo-colors = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
rpassword = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
textwrap = { workspace = true, features = ["terminal_size"] }
timber = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["fs", "io-std", "rt"] }
tokio-util = { workspace = true, features = ["io"] }
toml = { workspace = true }

[dependencies.minty]
path = "../minty"
version = "0.7.0"
registry = "minty"
features = ["export", "http"]

[[bin]]
name = "minty"
path = "src/main.rs"
