[package]
name = "minty-core"
version = "0.6.1-dev"
edition.workspace = true
repository.workspace = true

[dependencies]
argon2 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
elasticsearch = { workspace = true }
ffmpeg-sys-next = { workspace = true }
fstore = { workspace = true, features = ["http"] }
futures = { workspace = true }
futures-core = { workspace = true }
graphicsmagick-sys = { workspace = true }
log = { workspace = true }
pgtools = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqlx-helper-macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
url = { workspace = true }

[dependencies.minty]
path = "../minty"
version = "0.6.1-dev"
registry = "minty"
features = ["export"]
