[package]
name = "minty"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
url = { workspace = true }
uuid = { workspace = true }

# HTTP dependencies
log = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
tokio-stream = { workspace = true, optional = true }

[features]
export = ["serde"]
http = ["serde", "dep:log", "dep:mime", "dep:reqwest", "dep:tokio-stream"]
serde = ["dep:serde", "chrono/serde", "url/serde", "uuid/serde"]
