[package]
name = "minty"
version = "0.7.1"
edition.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
url = { workspace = true }
uuid = { workspace = true }

# HTTP dependencies
cookie_store = { workspace = true, optional = true }
log = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["cookies", "json"] }
serde_urlencoded = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[features]
export = ["serde"]
http = [
    "serde",
    "dep:cookie_store",
    "dep:log",
    "dep:mime",
    "dep:reqwest",
    "dep:serde_urlencoded",
    "dep:tokio-stream",
]
serde = ["dep:serde", "chrono/serde", "url/serde", "uuid/serde"]
