[package]
name = "mintyd"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["async-read-body", "query"] }
axum-unix = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
crossterm = { workspace = true }
dmon = { workspace = true }
log = { workspace = true, features = ["serde"] }
ratatui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sync_wrapper = { workspace = true, features = ["futures"] }
timber = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["io"] }

[dependencies.minty]
path = "../minty"
version = "0.6"
registry = "minty"
features = ["http"]

[dependencies.minty-core]
path = "../minty-core"
version = "0.6"
registry = "minty"
