[package]
name = "mintyd"
version = "0.7.2"
edition.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = [
    "async-read-body",
    "cookie",
    "query",
] }
axum-unix = { workspace = true, features = ["serde"] }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
cookie = { workspace = true }
crossterm = { workspace = true }
dmon = { workspace = true }
log = { workspace = true, features = ["serde"] }
ratatui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sync_wrapper = { workspace = true, features = ["futures"] }
timber = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["io"] }
toml = { workspace = true, features = ["parse"] }

[dependencies.minty]
path = "../minty"
version = "0.7.0"
registry = "minty"
features = ["http"]

[dependencies.minty-core]
path = "../minty-core"
version = "0.7.1"
registry = "minty"
