[package]
name = "mintyd"
version = "0.7.2"
edition.workspace = true
repository.workspace = true

[dependencies]
ago = { workspace = true }
axum = { workspace = true, features = ["http2"] }
axum-extra = { workspace = true, features = [
    "cookie",
    "query",
    "typed-header",
] }
axum-unix = { workspace = true, features = ["serde"] }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
cookie = { workspace = true }
crossterm = { workspace = true }
dmon = { workspace = true }
fstore = { workspace = true, features = ["axum"] }
headers = { workspace = true }
log = { workspace = true, features = ["serde"] }
maud = { workspace = true, features = ["axum"] }
mediatype = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = { workspace = true }
sync_wrapper = { workspace = true, features = ["futures"] }
timber = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { workspace = true }
toml = { workspace = true, features = ["parse"] }
tower-http = { workspace = true, optional = true, features = ["fs"] }

[dependencies.minty]
path = "../minty"
version = "0.7.0"
registry = "minty"
features = ["http"]

[dependencies.minty-core]
path = "../minty-core"
version = "0.7.1"
registry = "minty"

[features]
servedir = ["dep:tower-http"]
